# Galaxie

./: .gitignore  CMakeLists.txt  Performances.md  README.md
data/: sprite.frag  sprite.vert
data/colors/: BlueRed.txt  OrangeBlue copie.txt  OrangeBlue.txt
galaxies/: Solar.tab  dubinski_disks.tab  dubinski_disks_bulges.tab
src/: benchmark.cpp  main.cpp  test.cpp
src/Backend/: Render.cpp  Render.hpp
src/Backend/BackEndColoredSprite/: BackEndColoredSprite.cpp  BackEndColoredSprite.hpp
src/Backend/BackEndSprite/: BackEndSprite.cpp  BackEndSprite.hpp  tools.cpp  tools.hpp
src/Backend/NullRender/: NullRender.cpp  NullRender.hpp
src/Backend/OnlyOpenGL/: OnlyOpenGL.cpp  OnlyOpenGL.hpp
src/Backend/OpenGLRender/: OpenGLRender.cpp  OpenGLRender.hpp
src/Backend/RGBColors/: RGBColors.cpp  RGBColors.hpp
src/Backend/SDLBlackPixel/: SDLBlackPixel.cpp  SDLBlackPixel.hpp
src/Backend/SDLColorPixel/: SDLColorPixel.cpp  SDLColorPixel.hpp
src/Backend/SDLRender/: SDLRender.cpp  SDLRender.hpp
src/Backend/SpriteOpenGL/: SpriteOpenGL.cpp  SpriteOpenGL.hpp
src/Backend/others/: text.cpp  text.h
src/Galaxy/: Galaxy.cpp  Galaxy.hpp
src/datatype/: Loader.cpp  Loader.hpp  datatype.cpp  datatype.h
src/kernel/: Kernel.cpp  Kernel.hpp
src/kernel/auto_simd/: RenderAutoSIMD.cpp  RenderAutoSIMD.hpp
src/kernel/cuda/: RenderCUDA.cu  RenderCUDA.hpp  galaxeirb.cu
src/kernel/metal/: RenderMetalApple.cpp  RenderMetalApple.hpp  galaxeirb.metal  run.sh
src/kernel/metal_v2/: RenderMetalApple_v2.cpp  RenderMetalApple_v2.hpp  galaxeirb_v2.metal  run.sh
src/kernel/naive/: RenderNaive.cpp  RenderNaive.hpp
src/kernel/naive_update/: RenderNaiveUpdate.cpp  RenderNaiveUpdate.hpp
src/kernel/null/: RenderNull.cpp  RenderNull.hpp
src/kernel/openmp/: RenderOpenMP.cpp  RenderOpenMP.hpp
src/kernel/optim_openmp/: RenderOptimOpenMP.cpp  RenderOptimOpenMP.hpp
src/kernel/optimized/: RenderOptim.cpp  RenderOptim.hpp
src/kernel/simd/AVX2/: RenderAVX2.cpp  RenderAVX2.hpp
src/kernel/simd/AVX512/: RenderAVX512.cpp  RenderAVX512.hpp
src/kernel/simd/NEON/: RenderNEON.cpp  RenderNEON.hpp
src/kernel/simd/SSE4/: RenderSSE4.cpp  RenderSSE4.hpp
src/kernel/simd_openmp/AVX2/: RenderAVX2OpenMP.cpp  RenderAVX2OpenMP.hpp
src/kernel/simd_openmp/AVX512/: RenderAVX512OpenMP.cpp  RenderAVX512OpenMP.hpp
src/kernel/simd_openmp/NEON/: RenderNEONOpenMP.cpp  RenderNEONOpenMP.hpp
src/kernel/simd_openmp/SSE4/: RenderSSE4OpenMP.cpp  RenderSSE4OpenMP.hpp
src/tests/: test_avx2.hpp  test_avx2_openmp.hpp  test_avx512.hpp  test_avx512_openmp.hpp  test_cuda.hpp  test_macos_metal.hpp  test_macos_metal_v2.hpp  test_neon.hpp  test_neon_openmp.hpp  test_openmp.hpp  test_optim_openmp.hpp  test_optimized.hpp  test_sse4.hpp  test_sse4_openmp.hpp
